fix(textwrap): update styles to fix text wrap UI error

--- a/src/style-anchorlink.scss
+++ b/src/style-anchorlink.scss
@@ -31,6 +31,11 @@
       outline: unset;
     }
   }
+
+  .hyperlink {
+    // Wraps text in auro-anchorlink
+    white-space: unset;
+  }
 }
 
 :host(:focus) {
